# kubeopt_kubeopt

./: .gitignore  README.md  action.yml  docker-entrypoint.sh  pyproject.toml
docs/: RAILWAY-DEPLOYMENT.md
mcp_server/: README.md  server.py
