[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubeopt-mcp"
version = "1.0.0"
description = "MCP server for KubeOpt — query Kubernetes cluster costs from Claude, Cursor, or Windsurf"
readme = "mcp_server/README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["kubernetes", "mcp", "cost-optimization", "k8s", "devops", "finops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/kubeopt/kubeopt"
Repository = "https://github.com/kubeopt/kubeopt"
Documentation = "https://github.com/kubeopt/kubeopt#claude-ai-integration-mcp"

[project.scripts]
kubeopt-mcp = "mcp_server.server:run"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.hatch.build.targets.sdist]
include = ["mcp_server/"]
